    - drm/i915: Correct obj->mm_list link to
      dev_priv->dev_priv->mm.inactive_list

  [ Ben Hutchings ]
  * [hppa] udeb: Add core-modules package (Closes: #718270)
  * nl80211: fix another nl80211_fam.attrbuf race
  * Bump ABI to 2
  * ext4: fix retry handling in ext4_ext_truncate()
  * atl1c: Fix misuse of netdev_alloc_skb in refilling rx ring
    (Closes: #718505)

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 30 Jul 2013 18:09:20 +0200

linux (3.10.3-1) unstable; urgency=low

  * New upstream stable update:
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.10.2
    - CIFS: Fix a deadlock when a file is reopened
    - jbd2: move superblock checksum calculation to jbd2_write_superblock()
    - jbd2: fix theoretical race in jbd2__journal_restart
    - ext4: fix corruption when online resizing a fs with 1K block size
    - ext3,ext4: don't mess with dir_file->f_pos in htree_dirblock_to_tree()
    - ext4: check error return from ext4_write_inline_data_end()
    - xhci: check for failed dma pool allocation
    - [x86] drivers: hv: switch to use mb() instead of smp_mb()
    - cgroup: fix umount vs cgroup_event_remove() race
    - cgroup: fix RCU accesses to task->cgroups
    - [hppa] Fix gcc miscompilation in pa_memcpy()
    - [hppa] Ensure volatile space register %sr1 is not clobbered
    - genirq: Fix can_request_irq() for IRQs without an action
      (Closes: #709647)
    - [x86] ACPI: Fix HP Folio 13 EC register access (Closes: #684186)
      + ACPI: Add CMOS RTC Operation Region handler support
      + ACPI / EC: Add HP Folio 13 to ec_dmi_table in order to skip DSDT scan
    - ocfs2: xattr: fix inlined xattr reflink
    - iwlwifi: pcie: fix race in queue unmapping
    - Btrfs: fix estale with btrfs send
    - Btrfs: hold the tree mod lock in __tree_mod_log_rewind
    - Btrfs: only do the tree_mod_log_free_eb if this is our last ref
    - ext4: fix data offset overflow on 32-bit archs in
      ext4_inline_data_fiemap()