@@ -77,6 +77,7 @@ linux (3.10.5-1) UNRELEASED; urgency=low
   * ext4: fix retry handling in ext4_ext_truncate()
   * atl1c: Fix misuse of netdev_alloc_skb in refilling rx ring
     (Closes: #718505)
+  * [rt] genpatch.py: Accept missing series-rt
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 30 Jul 2013 18:09:20 +0200
 
